# exchange

./: README.md  pyproject.toml
backend/: asgi.py  celery.py  routing.py  settings.py
backend/binance/: apps.py  structs.py  tasks.py  utils.py
backend/binance/management/commands/: binance_fetch.py  binance_replay.py
backend/stream/: apps.py  consumers.py  structs.py
deploy/: Dockerfile  docker-compose.yaml
deploy/config/: .env.sample  nginx.conf
